src/styles/components/printable-components/part-tag.scss
.part-tag {
  background-color: white;
  color: black;
  padding: 1rem;
  text-align: center;
  font-size: 60px;
  position: relative;
  height: 100%;
  width: 100%;
  margin-left: 1rem;

  h1 {
    font-size: 170px;
    margin-top: 2.9rem;
  }

  &__header {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 1rem;
    margin: 0;

    h1 {
      margin: -2rem 0 0;
    }
  }

  &__row {
    display: flex;
    justify-content: center;
    font-weight: bold;
    font-size: 60px;
    width: fit-content;
    gap: 8rem;
    margin: auto;
  }

  &__middle {
    display: flex;
    justify-content: center;
    width: 66rem;
    margin: auto;
  }

  &__location {
    transform: rotate(90deg);
    height: fit-content;
    position: absolute;
    top: 50;
    left: 2rem;
  }

  &__barcode {
    position: absolute;
    right: 11.5rem;
    top: 50%;
    width: fit-content;
    height: fit-content;
    transform: rotate(-90deg) translateX(50%);
    transform-origin: top right;
  }

  &__remarks {
    width: 60rem;
    text-align: center;
    line-height: 4.5rem;
    font-size: 50px;
    margin-left: 0.7rem;
  }

  &__bottom-row {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    width: 1380px;
    position: absolute;
    bottom: 0;
    left: 3rem;
  }

  &__date {
    font-size: 40px;
  }

  &__rating {
    font-weight: bold;
    font-size: 60px;
  }
}

.part-tag-up {
  background-color: white;
  color: black;
  padding: 10rem 1rem 1rem;
  text-align: center;
  font-size: 60px;
  position: relative;
  height: 100%;
  width: 100%;
  margin-left: 1rem;

  h1 {
    font-size: 170px;
    margin-top: 2.9rem;
  }

  &__date {
    text-align: start;
    font-size: 40px;
    margin-left: 1rem;
  }

  &__middle {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    justify-content: center;
    vertical-align: middle;
    margin-top: 2rem;
  }

  &__location {
    transform: rotate(90deg);
    padding: 0 0 3.5rem;
    height: 0;
    position: absolute;
    left: 1rem;
    top: 60%;
  }

  &__barcode {
    position: absolute;
    right: 11.5rem;
    top: 50%;
    width: fit-content;
    height: fit-content;
    transform: rotate(-90deg) translateX(50%);
    transform-origin: top right;
  }
}

